--- a/resume.html
+++ b/resume.html
@@ -13,10 +13,12 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}#b{ba
 <meta name="msapplication-TileImage" content="images/mstile-144x144-fa34b1.png">
 <link rel="manifest" href="manifest.json" crossOrigin="use-credentials">
 <meta name="theme-color" content="#f0f0f0">
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.26172c.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.ddbefc.css" media="print">
 </head>
 <body id="b">
 <script>var p=document.createElement("P");p.innerHTML="&nbsp;",p.style.cssText="position:fixed;visible:hidden;font-size:100px;zoom:1",document.body.appendChild(p);var rsz=function(e){return function(){var r=Math.trunc(1e3/parseFloat(window.getComputedStyle(e).getPropertyValue("font-size")))/10,t=document.body;r!=t.style.getPropertyValue("--f")&&t.style.setProperty("--f",r)}}(p);if("ResizeObserver"in window){var ro=new ResizeObserver(rsz);ro.observe(p)}else if("requestAnimationFrame"in window){var raf=function(){rsz(),requestAnimationFrame(raf)};requestAnimationFrame(raf)}else setInterval(rsz,100);</script>
+
+<script>!function(){var e=function(){var e=document.body;e.style.setProperty("--z",1);var t=window.innerWidth,n=getComputedStyle(e).getPropertyValue("--s");if(320==n){if(t<320)return;t=Math.min(479,t)}else if(480==n){if(t<480)return;t=Math.min(610,t)}else t=n;e.style.setProperty("--z",Math.trunc(t/n*1e3)/1e3)};window.addEventListener?window.addEventListener("resize",e,!0):window.onscroll=e,e()}();</script>
 
 <div class="ps17 v5 s18 z14">
 <div class="v6 ps18 s19">
