--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}#b{ba
 <meta name="msapplication-TileImage" content="images/mstile-144x144-fa34b1.png">
 <link rel="manifest" href="manifest.json" crossOrigin="use-credentials">
 <meta name="theme-color" content="#f0f0f0">
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.ddbefc.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.486e54.css" media="print">
 </head>
 <body id="b">
 <script>var p=document.createElement("P");p.innerHTML="&nbsp;",p.style.cssText="position:fixed;visible:hidden;font-size:100px;zoom:1",document.body.appendChild(p);var rsz=function(e){return function(){var r=Math.trunc(1e3/parseFloat(window.getComputedStyle(e).getPropertyValue("font-size")))/10,t=document.body;r!=t.style.getPropertyValue("--f")&&t.style.setProperty("--f",r)}}(p);if("ResizeObserver"in window){var ro=new ResizeObserver(rsz);ro.observe(p)}else if("requestAnimationFrame"in window){var raf=function(){rsz(),requestAnimationFrame(raf)};requestAnimationFrame(raf)}else setInterval(rsz,100);</script>
